# edge-llm-chat

./: .env.local  .replit  README.md  design_guidelines.md  fastapi_server.py  package-lock.json  package.json  pyproject.toml  replit.md  start_fastapi.py  whitepaper.html  whitepaper.md
app/: __init__.py  deps.py  main.py
app/api/v1/: __init__.py  admin.py  auth.py  chat.py  devices.py  router.py
app/core/: config.py  database.py
app/domain/: __init__.py  models.py
app/repositories/: admin_service_repository.py  chat_repository.py  device_repository.py  user_repository.py
app/schemas/: __init__.py  admin.py  auth.py  chat.py  devices.py
app/services/: chat_service.py  device_service.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: CameraCapture.tsx  ChatInterface.tsx  DeviceConnection.tsx  HeroSection.tsx  LoginForm.tsx  Navigation.tsx  ThemeToggle.tsx
client/src/components/examples/: CameraCapture.tsx  ChatInterface.tsx  DeviceConnection.tsx  HeroSection.tsx  LoginForm.tsx  Navigation.tsx  ThemeToggle.tsx
client/src/hooks/: useAuth.ts  useChat.ts  useDevices.ts
client/src/lib/: api.ts
client/src/pages/: Admin.tsx  Chat.tsx  Devices.tsx  Home.tsx  Login.tsx
scripts/: build.sh  create-pdf.sh  install.sh  package.sh
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
